--- a/DCGAN/DCGAN.ipynb
+++ b/DCGAN/DCGAN.ipynb
@@ -11,34 +11,34 @@
     "$D$ and $G$ play the following two-player minimax game with value function $V(G, D)$: \n",
     "\n",
     "$$\n",
-    "\\min_G \\max_D V(D, G) = \\mathbb{E}_{\\bm{x} \\sim p_{\\text{data}}(\\bm{x})}[\\log D(\\bm{x})] + \\mathbb{E}_{\\bm{z} \\sim p_{\\bm{z}}(\\bm{z})}[\\log (1 - D(G(\\bm{z})))].\n",
+    "\\min_G \\max_D V(D, G) = \\mathbb{E}_{\\mathbf{x} \\sim p_{\\text{data}}(\\mathbf{x})}[\\log D(\\mathbf{x})] + \\mathbb{E}_{\\mathbf{z} \\sim p_{\\mathbf{z}}(\\mathbf{z})}[\\log (1 - D(G(\\mathbf{z})))].\n",
     "$$\n",
     "\n",
     "This translates into two minimization problems:\n",
     "\n",
     "$$\n",
-    "\\min_D -\\mathbb{E}_{\\bm{x} \\sim p_{\\text{data}}(\\bm{x})}[\\log D(\\bm{x})] - \\mathbb{E}_{\\bm{z} \\sim p_{\\bm{z}}(\\bm{z})}[\\log (1 - D(G(\\bm{z})))]\n",
+    "\\min_D -\\mathbb{E}_{\\mathbf{x} \\sim p_{\\text{data}}(\\mathbf{x})}[\\log D(\\mathbf{x})] - \\mathbb{E}_{\\mathbf{z} \\sim p_{\\mathbf{z}}(\\mathbf{z})}[\\log (1 - D(G(\\mathbf{z})))]\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\min_G \\mathbb{E}_{\\bm{z} \\sim p_{\\bm{z}}(\\bm{z})}[\\log (1 - D(G(\\bm{z})))]\n",
+    "\\min_G \\mathbb{E}_{\\mathbf{z} \\sim p_{\\mathbf{z}}(\\mathbf{z})}[\\log (1 - D(G(\\mathbf{z})))]\n",
     "$$\n",
     "\n",
     "For $G$, we use the following loss instead:\n",
     "\n",
     "$$\n",
-    "\\min_G -\\mathbb{E}_{\\bm{z} \\sim p_{\\bm{z}}(\\bm{z})}[\\log (D(G(\\bm{z})))]\n",
+    "\\min_G -\\mathbb{E}_{\\mathbf{z} \\sim p_{\\mathbf{z}}(\\mathbf{z})}[\\log (D(G(\\mathbf{z})))]\n",
     "$$\n",
     "\n",
     "---\n",
     "In summary,\n",
     "\n",
     "$$\n",
-    "\\min_D \\mathbb{E}_{\\bm{x} \\sim p_{\\text{data}}(\\bm{x})}[-\\log D(\\bm{x})] + \\mathbb{E}_{\\bm{z} \\sim p_{\\bm{z}}(\\bm{z})}[-\\log (1 - D(G(\\bm{z})))]\n",
+    "\\min_D \\mathbb{E}_{\\mathbf{x} \\sim p_{\\text{data}}(\\mathbf{x})}[-\\log D(\\mathbf{x})] + \\mathbb{E}_{\\mathbf{z} \\sim p_{\\mathbf{z}}(\\mathbf{z})}[-\\log (1 - D(G(\\mathbf{z})))]\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\min_G \\mathbb{E}_{\\bm{z} \\sim p_{\\bm{z}}(\\bm{z})}[-\\log (D(G(\\bm{z})))]\n",
+    "\\min_G \\mathbb{E}_{\\mathbf{z} \\sim p_{\\mathbf{z}}(\\mathbf{z})}[-\\log (D(G(\\mathbf{z})))]\n",
     "$$\n",
     "\n",
     "In practice,\n",
