--- a/DCGAN/GAN.ipynb
+++ b/DCGAN/GAN.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DCGAN (Deep Convolutional Generative Adversarial Networks)\n",
+    "# GAN (Generative Adversarial Networks)\n",
     "\n",
     "We simultaneously train two models: a generative model $G$ that captures the data distribution, and a discriminative model $D$ that estimates the probability that a sample came from the training data rather than $G$.\n",
     "\n",
