edit ts forecast pytorch

--- a/Timeseries/time_series_forecasting_pytorch.ipynb
+++ b/Timeseries/time_series_forecasting_pytorch.ipynb
@@ -931,23 +931,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([5, 10])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "nn.Flatten(start_dim=1)(x).shape"
+    "$$\n",
+    "c_1, c_2, ..., c_{10} = \\text{1DCNN}(x_1, x_2, ..., x_{10})\n",
+    "$$"
    ]
   },
   {
