--- a/PyHC/2024/hapi/HAPI_01_basics.ipynb
+++ b/PyHC/2024/hapi/HAPI_01_basics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Heliophysics Data Application Programmer’s Interface (HAPI)\n",
+    "# HAPI - Basics\n",
     "\n",
     "- https://hapi-server.org/\n",
     "- https://github.com/heliophysicsPy/summer-school-24/tree/main/hapi-tutorial"
