add ref url to sunpy nbs

--- a/PyHC/plasmapy/plasmapy-tutorial.ipynb
+++ b/PyHC/plasmapy/plasmapy-tutorial.ipynb
@@ -5,7 +5,9 @@
    "id": "6cdfe335-edca-49e2-aeb0-9a393a249f8d",
    "metadata": {},
    "source": [
-    "# PlasmaPy Tutorial"
+    "# PlasmaPy Tutorial\n",
+    "\n",
+    "- https://github.com/heliophysicsPy/summer-school-24/tree/main/plasmapy-tutorial"
    ]
   },
   {
