add neuromancer L2C, PINN, NO

--- a/Neuromancer/Learning_to_Optimize/01_basics.ipynb
+++ b/Neuromancer/Learning_to_Optimize/01_basics.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Learning to optimize parametric nonlinear programming problem (pNLP) using Neuromancer\n",
     "\n",
-    "This is an interactive notebook based on the python script [Part_1_LearnToOptimize_tutorial.py](./Part_1_LearnToOptimize_tutorial.py).  \n",
+    "This is an interactive notebook based on the python script [Part_1_basics.py](https://github.com/pnnl/neuromancer/blob/master/examples/parametric_programming/Part_1_basics.py).  \n",
     "\n",
     "We will demonstrate the capability of learning to optimize (L2O)\n",
     "for solving [parametric nonlinear programming problem (pNLP)](https://en.wikipedia.org/wiki/Parametric_programming) defined as:\n",
