Solarsoft, SpaceML/SDOML degradation, Sunpy/aiapy

--- a/SpaceML/SDOML/04_sdoml_reproduce_aia.ipynb
+++ b/SpaceML/SDOML/04_sdoml_reproduce_aia.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b7314489-f2b5-4f6c-8573-e03061109001",
+   "metadata": {},
+   "source": [
+    "SDO/AIA Synoptic FITS Data\n",
+    "\n",
+    "The AIA Synoptic FITS data are reduced to 1024x1024 2.4 arc-sec pixels by summing with pixel value in DN per original 0.6 arc-sec pixel. The data cadence is 2 minutes. These images are produced approximately 7 days after T_OBS since they are derived from definitive level 1 data.\n",
+    "\n",
+    "- https://hpde.io/NASA/NumericalData/SDO/AIA/Synoptic/PT120S.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2f2fd961-2a24-4f80-9e54-3f8960e3822d",
