--- a/Solarsoft/get_sdo_with_ssw.ipynb
+++ b/Solarsoft/get_sdo_with_ssw.ipynb
@@ -24,13 +24,12 @@
     "Records Returned : JSOC : 25/25\n",
     "\n",
     "; Sort the results by date and print the date\n",
-    "IDL> results = results(SORT(cat.time.start))\n",
-    "% Expression must be a structure in this context: CAT.\n",
-    "% Execution halted at: $MAIN$          \n",
+    "IDL> results = results(SORT(results.time.start))\n",
     "IDL> print, results.time.start\n",
-    "2010-12-06T11:00:00 2010-12-06T13:00:00 2010-12-06T12:00:00 2010-12-06T20:00:00 2010-12-06T08:00:00 2010-12-06T03:00:33 2010-12-07T00:00:00 2010-12-06T14:00:00 2010-12-06T10:00:00 2010-12-06T05:00:00 2010-12-06T22:00:00\n",
-    "2010-12-06T21:00:36 2010-12-06T06:00:00 2010-12-06T09:00:00 2010-12-06T23:00:00 2010-12-06T02:00:00 2010-12-06T19:00:00 2010-12-06T04:00:00 2010-12-06T18:00:00 2010-12-06T17:00:00 2010-12-06T16:00:00 2010-12-06T01:00:00\n",
-    "2010-12-06T15:00:00 2010-12-06T07:00:00 2010-12-06T00:00:00\n",
+    "2010-12-06T00:00:00 2010-12-06T01:00:00 2010-12-06T02:00:00 2010-12-06T03:00:33 2010-12-06T04:00:00 2010-12-06T05:00:00 2010-12-06T06:00:00\n",
+    "2010-12-06T07:00:00 2010-12-06T08:00:00 2010-12-06T09:00:00 2010-12-06T10:00:00 2010-12-06T11:00:00 2010-12-06T12:00:00 2010-12-06T13:00:00\n",
+    "2010-12-06T14:00:00 2010-12-06T15:00:00 2010-12-06T16:00:00 2010-12-06T17:00:00 2010-12-06T18:00:00 2010-12-06T19:00:00 2010-12-06T20:00:00\n",
+    "2010-12-06T21:00:36 2010-12-06T22:00:00 2010-12-06T23:00:00 2010-12-07T00:00:00\n",
     "\n",
     "; Download the first three files\n",
     "IDL> status = VSO_GET(results[0:2], pixels=4096, filenames=files, /rice,  /use_network)\n",
