--- a/SpaceML/SDOML/05_sdoml_reproduce_hmi.ipynb
+++ b/SpaceML/SDOML/05_sdoml_reproduce_hmi.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bbf6c20d-6c31-4683-b509-2cb00d18c009",
+   "metadata": {},
+   "source": [
+    "SDO/HMI Vector Magnetic Field\n",
+    "\n",
+    "The vector magnetic field is derived from full-disk filtergrams collected in a 135-second sequence. (90 seconds after 13 April 2016). The observations are obtained in polarized light at several wavelengths across a spectral line. The filtergrams are calibrated and registered to account for solar rotation before being combined to provide Stokes polarization parameters. The parameters are used to determine the magnetic and other plasma parameters using VFISV, a Milne-Eddington inversion code. The final step is to disambiguate the data, that is to infer the azimuthal direction of the transverse field.\n",
+    "\n",
+    "- https://hpde.io/NASA/NumericalData/SDO/HMI/Vector_Magnetic_Field/PT720S.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e6be9a6d-3c23-4335-8afc-b79d014a064d",
@@ -53,43 +65,60 @@
    "execution_count": null,
    "id": "a5c228e9-dc5e-4032-8058-c55078370f1e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m sorted_indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margsort(data_bx\u001b[38;5;241m.\u001b[39mattrs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT_OBS\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m      6\u001b[0m img_index \u001b[38;5;241m=\u001b[39m sorted_indices[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m----> 7\u001b[0m selected_headr \u001b[38;5;241m=\u001b[39m {keys: values[img_index] \u001b[38;5;28;01mfor\u001b[39;00m keys, values \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdata\u001b[49m\u001b[38;5;241m.\u001b[39mattrs\u001b[38;5;241m.\u001b[39mitems()}\n\u001b[0;32m      8\u001b[0m selected_image \u001b[38;5;241m=\u001b[39m da\u001b[38;5;241m.\u001b[39mfrom_array(data_bx)[img_index, :, :]\n\u001b[0;32m      9\u001b[0m smap_ml_bx \u001b[38;5;241m=\u001b[39m Map((np\u001b[38;5;241m.\u001b[39marray(selected_image), selected_headr))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root = load_single_aws_zarr(\n",
     "    path_to_zarr=\"s3://gov-nasa-hdrl-data1/contrib/fdl-sdoml/fdl-sdoml-v2/sdomlv2_hmi.zarr\",\n",
     ")\n",
-    "data_bx = root[\"2010\"][\"Bx\"]\n",
-    "sorted_indices = np.argsort(data_bx.attrs[\"T_OBS\"])\n",
-    "img_index = sorted_indices[0]\n",
-    "selected_headr = {keys: values[img_index] for keys, values in data_bx.attrs.items()}\n",
-    "selected_image = da.from_array(data_bx)[img_index, :, :]\n",
-    "smap_ml_bx = Map((np.array(selected_image), selected_headr))\n",
+    "data_bx = root[\"2012\"][\"Bx\"]\n",
+    "sorted_indices_bx = np.argsort(data_bx.attrs[\"T_OBS\"])\n",
     "\n",
-    "data_by = root[\"2010\"][\"By\"]\n",
-    "sorted_indices = np.argsort(data_by.attrs[\"T_OBS\"])\n",
-    "img_index = sorted_indices[0]\n",
-    "selected_headr = {keys: values[img_index] for keys, values in data_by.attrs.items()}\n",
-    "selected_image = da.from_array(data_by)[img_index, :, :]\n",
-    "smap_ml_by = Map((np.array(selected_image), selected_headr))\n",
+    "data_by = root[\"2012\"][\"By\"]\n",
+    "sorted_indices_by = np.argsort(data_by.attrs[\"T_OBS\"])\n",
     "\n",
-    "data_bz = root[\"2010\"][\"Bz\"]\n",
-    "sorted_indices = np.argsort(data_by.attrs[\"T_OBS\"])\n",
-    "img_index = sorted_indices[0]\n",
-    "selected_headr = {keys: values[img_index] for keys, values in data_bz.attrs.items()}\n",
-    "selected_image = da.from_array(data_bz)[img_index, :, :]\n",
-    "smap_ml_bz = Map((np.array(selected_image), selected_headr))"
+    "data_bz = root[\"2012\"][\"Bz\"]\n",
+    "sorted_indices_bz = np.argsort(data_bz.attrs[\"T_OBS\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a616f28f-a38c-4968-bb3d-7619d04c512a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_map(data, sorted_indices, idx):\n",
+    "    img_index = sorted_indices[idx]\n",
+    "    selected_headr = {keys: values[img_index] for keys, values in data.attrs.items()}\n",
+    "    selected_image = da.from_array(data_bx)[img_index, :, :]\n",
+    "    smap_ml = Map((np.array(selected_image), selected_headr))\n",
+    "    return smap_ml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "979a703e-4cde-441c-b4b7-0485053b2b20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2011.12.31_23:59:52_TAI\n",
+      "2011.12.31_23:59:52_TAI\n",
+      "2011.12.31_23:59:52_TAI\n"
+     ]
+    }
+   ],
+   "source": [
+    "ix, iy, iz = 0, 0, 0\n",
+    "smap_ml_bx = get_map(data_bx, sorted_indices_bx, ix)\n",
+    "smap_ml_by = get_map(data_by, sorted_indices_by, iy)\n",
+    "smap_ml_bz = get_map(data_bz, sorted_indices_bz, iz)\n",
+    "print(smap_ml_bx.meta[\"T_OBS\"])\n",
+    "print(smap_ml_by.meta[\"T_OBS\"])\n",
+    "print(smap_ml_bz.meta[\"T_OBS\"])"
    ]
   },
   {
@@ -97,18 +126,102 @@
    "execution_count": null,
    "id": "afc5e1f8-d793-45bc-abf2-af2673ed93df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Results from 1 Provider:</br></br>2 Results from the VSOClient:</br><div><i>VSOQueryResponseTable length=2</i>\n",
+       "<table id=\"table1314373593168\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>Start Time</th><th>Source</th><th>Instrument</th><th>Wavelength</th><th>Provider</th><th>Physobs</th><th>Wavetype</th><th>Extent Type</th><th>Size</th><th>Datatype</th></tr></thead>\n",
+       "<thead><tr><th></th><th></th><th></th><th>Angstrom</th><th></th><th></th><th></th><th></th><th>Mibyte</th><th></th></tr></thead>\n",
+       "<thead><tr><th>Time</th><th>str3</th><th>str3</th><th>float64[2]</th><th>str3</th><th>str21</th><th>str4</th><th>str8</th><th>float64</th><th>str5</th></tr></thead>\n",
+       "<tr><td>2012-01-01 00:00:00.000</td><td>SDO</td><td>HMI</td><td>6173.0 .. 6173.0</td><td>NSO</td><td>VECTOR_MAGNETIC_FIELD</td><td>LINE</td><td>SYNOPTIC</td><td>2.1377</td><td>IMAGE</td></tr>\n",
+       "<tr><td>2012-01-01 00:00:00.000</td><td>SDO</td><td>HMI</td><td>6173.0 .. 6173.0</td><td>NSO</td><td>VECTOR_MAGNETIC_FIELD</td><td>LINE</td><td>SYNOPTIC</td><td>2.14062</td><td>IMAGE</td></tr>\n",
+       "</table></div></br>"
+      ],
+      "text/plain": [
+       "<sunpy.net.fido_factory.UnifiedResponse object>\n",
+       "Results from 1 Provider:\n",
+       "\n",
+       "2 Results from the VSOClient:\n",
+       "Source: https://sdac.virtualsolar.org/cgi/search\n",
+       "Total estimated size: 4.486 Mbyte\n",
+       "\n",
+       "       Start Time       Source Instrument    Wavelength    Provider        Physobs        Wavetype Extent Type   Size  Datatype\n",
+       "                                              Angstrom                                                          Mibyte         \n",
+       "----------------------- ------ ---------- ---------------- -------- --------------------- -------- ----------- ------- --------\n",
+       "2012-01-01 00:00:00.000    SDO        HMI 6173.0 .. 6173.0      NSO VECTOR_MAGNETIC_FIELD     LINE    SYNOPTIC  2.1377    IMAGE\n",
+       "2012-01-01 00:00:00.000    SDO        HMI 6173.0 .. 6173.0      NSO VECTOR_MAGNETIC_FIELD     LINE    SYNOPTIC 2.14062    IMAGE\n"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tr = a.Time(\"2010-05-13T00:00:00\", \"2010-05-13T00:00:12\")\n",
-    "aia_query = Fido.search(tr & a.Instrument.aia & a.Wavelength(94*u.angstrom))\n",
-    "filelist_fd = Fido.fetch(aia_query, path=\"data/{instrument}\")\n",
-    "smap_fd = Map(filelist_fd[0])"
+    "tr = a.Time(\"2012-01-01T00:00:00\", \"2012-01-01T00:01:00\")\n",
+    "hmi_query = Fido.search(tr & a.Instrument.hmi & a.Physobs.vector_magnetic_field)\n",
+    "hmi_query"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "158cc714-d6c5-4099-a397-5af09fb7c62d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3fa1a403bd02497c99b3f9933709888b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Files Downloaded:   0%|          | 0/2 [00:00<?, ?file/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "864bf3a5c09146fe9e0f704c1ea55581",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "x9x93120101t000000_map_err_qsd_ract_dim_180_source_SDO_HMI_type_b_720s_helio.fits.gz:   0%|          | 0.00/2.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aff994755a14475cad6e9347448b15a1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "x9x93120101t000000_map_err_qsd_rand_dim_180_source_SDO_HMI_type_b_720s_helio.fits.gz:   0%|          | 0.00/2.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "filelist_fd = Fido.fetch(hmi_query, path=\"data/{instrument}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be4beba-1126-49b2-8f73-50f225ef086c",
    "metadata": {},
    "outputs": [],
    "source": []
