add SSW_WinterSchool (2025)

--- a/PyHC/spacepy/01_MMS_Ephemeris.ipynb
+++ b/PyHC/spacepy/01_MMS_Ephemeris.ipynb
@@ -76,7 +76,7 @@
    "id": "d4ea17d5-21f1-41de-a1b6-f47af26624d5",
    "metadata": {},
    "source": [
-    "> In the meantime, Steve generated up-to-date files and I've processed them into the final parsed SpacePy database. That can be downloaded [here](https://spp-isois.sr.unh.edu/data_public/omni/omnidata.h5). Place that .h5 file in the data directory inside the [Spacepy DOT_FLN directory](https://spacepy.github.io/configuration.html).\n",
+    "> In the meantime, Steve generated up-to-date files and I've processed them into the final parsed SpacePy database. That can be downloaded [here](https://spp-isois.sr.unh.edu/data_public/omni/omnidata.h5). Place that .h5 file in the `data` directory inside the [Spacepy DOT_FLN directory](https://spacepy.github.io/configuration.html).\n",
     "\n",
     "- https://github.com/spacepy/spacepy/issues/731"
    ]
